--- a/public/main.css
+++ b/public/main.css
@@ -6,3 +6,6 @@ html, body {
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
     -webkit-font-smoothing: antialiased;
 }
+html {
+    overflow-y: scroll;
+}
